--- a/index.html
+++ b/index.html
@@ -1,33 +1,14 @@
+---
+layout: default
+title: Half Ninja
+---
 <!DOCTYPE html>
 <html>
 <head>
   <meta charset='utf-8'>
 
-  <title>halfninja/halfninja @ GitHub</title>
+  <title>Half Ninja</title>
 
-  <style type="text/css">
-    body {
-      margin-top: 1.0em;
-      background-color: #ffffff;
-      font-family: Helvetica, Arial, FreeSans, san-serif;
-      color: #000000;
-    }
-    #container {
-      margin: 0 auto;
-      width: 700px;
-    }
-    h1 { font-size: 3.8em; color: #000000; margin-bottom: 3px; }
-    h1 .small { font-size: 0.4em; }
-    h1 a { text-decoration: none }
-    h2 { font-size: 1.5em; color: #000000; }
-    h3 { text-align: center; color: #000000; }
-    a { color: #000000; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-    .download { float: right; }
-    pre { background: #000; color: #fff; padding: 15px;}
-    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
-  </style>
 </head>
 
 <body>
@@ -35,38 +16,22 @@
 
   <div id="container">
 
-    <div class="download">
-      <a href="http://github.com/halfninja/halfninja/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/halfninja/halfninja/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
-    </div>
+    <h1><a href="http://github.com/halfninja">Half Ninja</a></h1>
 
-    <h1><a href="http://github.com/halfninja/halfninja">halfninja</a>
-      <span class="small">by <a href="http://github.com/halfninja">halfninja</a></span></h1>
+    <p>A wizard has turned your git repo into a website! Is this awesome Y/N?</p>
 
-    <div class="description">
-      Website posts
-    </div>
+    <h2>Some kind of H-two</h2>
+
+    <p>Let's see what Jekyll can do.</p>
+
+   <ul class="posts">
+    {% for post in site.posts %}
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+  </ul>
 
     <h2>Contact</h2>
-<p>Nick Howes (nick@nickhowes.co.uk)<br/>      </p>
-
-
-    <h2>Download</h2>
-    <p>
-      You can download this project in either
-      <a href="http://github.com/halfninja/halfninja/zipball/master">zip</a> or
-      <a href="http://github.com/halfninja/halfninja/tarball/master">tar</a> formats.
-    </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running:
-      <pre>$ git clone git://github.com/halfninja/halfninja</pre>
-    </p>
-
-    <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/halfninja/halfninja">halfninja/halfninja</a>
-    </div>
+    <p>Nick Howes (nick@nickhowes.co.uk)</p>
 
   </div>
 
