--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ title: Half Ninja
 
    <ul class="posts">
     {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.root }}{{ post.url | remove:site.urlstrip }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
 
