Use site.baseurl

--- a/_posts/experiments/2011-08-02-three-js.html
+++ b/_posts/experiments/2011-08-02-three-js.html
@@ -1,3 +1,8 @@
+---
+title: Three.js test
+category: experiments
+permalink: /experiments/three-js.html
+---
 <html>
 <head>
 <script src="https://raw.github.com/mrdoob/three.js/418780fc74a73f09753c/build/Three.js"></script>
