Copy design from my website, and split up into blog and JS experiments

--- a/experiments/_posts/2011-08-02-three-js.html
+++ b/experiments/_posts/2011-08-02-three-js.html
@@ -1,7 +1,6 @@
 ---
 title: Three.js test
 category: experiments
-permalink: /experiments/three-js.html
 ---
 <html>
 <head>
@@ -55,7 +54,7 @@ function init() {
 	info.style.top = '10px';
 	info.style.width = '100%';
 	info.style.textAlign = 'center';
-	info.innerHTML = 'this will be better when it is not just copied from one of the <a href="https://github.com/mrdoob/three.js/">three.js</a> examples';
+	info.innerHTML = 'this will be better when it is not just copied from one of the <a href="https://github.com/mrdoob/three.js/">three.js</a> examples<br>(or rather, it will be worse)';
 	container.appendChild( info );
 
 	camera = new THREE.Camera( 45, window.innerWidth / window.innerHeight, - 2000, 1000 );
